src/objects/Global_DealIQ_Condition__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>Character</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Collateral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Capital</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Capacity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Document_Master__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Click Loans Document Master</label>
        <referenceTo>Document_Master__c</referenceTo>
        <relationshipLabel>Global DealIQ Rule</relationshipLabel>
        <relationshipName>Global_DealIQ_Rule</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Object_Rule_Works_On__c</fullName>
        <label>Object Rule Works On</label>
        <picklist>
            <picklistValues>
                <fullName>Product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bank</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RecordRuleWorksOn__c</fullName>
        <label>Record Rule Works On</label>
        <length>131071</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Req_Doc_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Req Doc Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>acfRule_Description__c</fullName>
        <label>Rule Description</label>
        <type>TextArea</type>
    </fields>
    <label>Global DealIQ Rule</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Global DealIQ Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Global DealIQ Rule</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>